Website responsive on mobile V2. Bug solved

--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -1,4 +1,7 @@
 .header {
+    @include breakpoint-down(small) {
+        height: 45rem;
+    }
 
     // Hamburger open styles
     &.open {
