--- a/app/scss/_pricing__recomended.scss
+++ b/app/scss/_pricing__recomended.scss
@@ -4,7 +4,7 @@
     text-align: center;
 
     @include breakpoint-down(small) {
-        height: 135rem;
+        height: 140rem;
     }
 
 }
