--- a/app/scss/_we.scss
+++ b/app/scss/_we.scss
@@ -107,6 +107,7 @@
         @include breakpoint-down(small) {
             text-align: center;
             color: #6D357B;
+            background-color: white;
             font-family: $button-font;
             font-size: $font-vsm;
             font-weight: 600;
